--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -38,11 +38,7 @@ body {
         font-size: 52px;
         margin: auto;
         text-align: center; }
-  .wrapper .section2 .container span {
-    display: block;
-    cursor: pointer;
-    margin: 0 auto; }
-  .wrapper .section2 .container .modal {
+  .wrapper .section2 .modal {
     align-items: center;
     background: #b8c1ec;
     border-radius: 20px;
@@ -57,24 +53,24 @@ body {
     position: relative;
     top: 35vh;
     transition: margin-top 1s ease-in;
-    width: 40%;
+    width: 30%;
     z-index: 9999; }
-    .wrapper .section2 .container .modal .form-title-wrapper {
+    .wrapper .section2 .modal .form-title-wrapper {
       color: #232946;
       font-size: 2rem;
       font-weight: 700;
       text-align: center;
       width: 100%; }
-    .wrapper .section2 .container .modal .form-wrapper {
+    .wrapper .section2 .modal .form-wrapper {
       display: flex;
       flex-direction: column;
       min-height: 22vh;
       width: 100%; }
-      .wrapper .section2 .container .modal .form-wrapper .form-body {
+      .wrapper .section2 .modal .form-wrapper .form-body {
         align-content: center;
         display: flex;
         flex-direction: column; }
-        .wrapper .section2 .container .modal .form-wrapper .form-body-login, .wrapper .section2 .container .modal .form-wrapper .form-body-password {
+        .wrapper .section2 .modal .form-wrapper .form-body-login, .wrapper .section2 .modal .form-wrapper .form-body-password {
           background-color: #fffffe;
           border-radius: 5px;
           border: none;
@@ -83,16 +79,16 @@ body {
           margin: auto auto 10px auto;
           min-height: 40px;
           width: 80%; }
-        .wrapper .section2 .container .modal .form-wrapper .form-body span {
+        .wrapper .section2 .modal .form-wrapper .form-body span {
           color: crimson;
           margin: auto;
           display: block;
           font-size: 10px;
           text-align: center;
           text-shadow: none; }
-          .wrapper .section2 .container .modal .form-wrapper .form-body span:hover {
+          .wrapper .section2 .modal .form-wrapper .form-body span:hover {
             cursor: default; }
-      .wrapper .section2 .container .modal .form-wrapper .btn-submit {
+      .wrapper .section2 .modal .form-wrapper .btn-submit {
         background-color: #cdfccd;
         border-radius: 5px;
         border: none;
@@ -109,23 +105,44 @@ body {
         /* Firefox 4 */
         -o-transition: 2s ease;
         /* Opera */ }
-        .wrapper .section2 .container .modal .form-wrapper .btn-submit:hover {
+        .wrapper .section2 .modal .form-wrapper .btn-submit:hover {
           background-color: #eebbc3;
           border: 1px solid #E79DAB;
           cursor: pointer;
           transition: 0.1s; }
-        .wrapper .section2 .container .modal .form-wrapper .btn-submit:focus {
+        .wrapper .section2 .modal .form-wrapper .btn-submit:focus {
           background-color: #eebbc3;
           border: 1px solid #E79DAB;
           cursor: pointer;
           outline: none;
           transition: 0.3s; }
-        .wrapper .section2 .container .modal .form-wrapper .btn-submit:active {
+        .wrapper .section2 .modal .form-wrapper .btn-submit:active {
           background-color: #cdfccd;
           border: 1px solid #cdfccd;
           cursor: pointer;
           outline: none;
           transition: 0.3s; }
+  .wrapper .section2 h1 {
+    position: absolute;
+    margin: 0; }
+  .wrapper .section2 .work-wrapper {
+    background-color: navajowhite;
+    height: 100vh;
+    margin: auto 0 auto auto;
+    width: calc(100% - 434px);
+    overflow: hidden;
+    padding-top: 90px; }
+    .wrapper .section2 .work-wrapper .work-data {
+      height: 100%;
+      overflow-y: scroll; }
+      .wrapper .section2 .work-wrapper .work-data .client-data {
+        border: 1px solid black;
+        border-bottom: none;
+        display: block;
+        width: 100%;
+        background-color: #b8c1ec;
+        height: 40px;
+        font-size: 18px; }
 
 section {
   align-items: center;
