thinking about viewing data

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,24 +1,33 @@
 @font-face {
   font-family: "Montserrat";
-  src: url("./../fonts/Montserrat-regular.ttf"); }
+  src: url("./../fonts/Montserrat-regular.ttf");
+}
 @keyframes fall {
   0% {
-    transform: translateY(-100vh); }
+    transform: translateY(-100vh);
+  }
   100% {
-    transform: translateY(0); } }
+    transform: translateY(0);
+  }
+}
 @keyframes up {
   0% {
-    transform: translateY(0); }
+    transform: translateY(0);
+  }
   100% {
-    transform: translateY(-100vh); } }
+    transform: translateY(-100vh);
+  }
+}
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 body {
   box-sizing: border-box;
   margin: 0;
   overflow: hidden;
-  text-shadow: 0 0 2px white; }
+  text-shadow: 0 0 2px white;
+}
 
 .wrapper {
   color: white;
@@ -27,129 +36,159 @@ body {
   min-height: 100vh;
   width: 100%;
   z-index: 0;
-  position: relative; }
-  .wrapper .section1, .wrapper .section2, .wrapper .section3, .wrapper .section4 {
-    height: 100vh; }
-    .wrapper .section1 .container, .wrapper .section2 .container, .wrapper .section3 .container, .wrapper .section4 .container {
-      font-size: 18px;
-      height: inherit;
-      width: 60vw; }
-      .wrapper .section1 .container h1, .wrapper .section2 .container h1, .wrapper .section3 .container h1, .wrapper .section4 .container h1 {
-        font-size: 52px;
-        margin: auto;
-        text-align: center; }
-  .wrapper .section2 .modal {
-    align-items: center;
-    background: #b8c1ec;
-    border-radius: 20px;
-    border: 1px solid #333;
-    color: #232946;
-    display: none;
-    flex-direction: column;
-    justify-content: space-around;
-    margin: 0 auto;
-    min-height: 40vh;
-    padding: 10px;
-    position: relative;
-    top: 35vh;
-    transition: margin-top 1s ease-in;
-    width: 30%;
-    z-index: 9999; }
-    .wrapper .section2 .modal .form-title-wrapper {
-      color: #232946;
-      font-size: 2rem;
-      font-weight: 700;
-      text-align: center;
-      width: 100%; }
-    .wrapper .section2 .modal .form-wrapper {
-      display: flex;
-      flex-direction: column;
-      min-height: 22vh;
-      width: 100%; }
-      .wrapper .section2 .modal .form-wrapper .form-body {
-        align-content: center;
-        display: flex;
-        flex-direction: column; }
-        .wrapper .section2 .modal .form-wrapper .form-body-login, .wrapper .section2 .modal .form-wrapper .form-body-password {
-          background-color: #fffffe;
-          border-radius: 5px;
-          border: none;
-          box-sizing: border-box;
-          display: block;
-          margin: auto auto 10px auto;
-          min-height: 40px;
-          width: 80%; }
-        .wrapper .section2 .modal .form-wrapper .form-body span {
-          color: crimson;
-          margin: auto;
-          display: block;
-          font-size: 10px;
-          text-align: center;
-          text-shadow: none; }
-          .wrapper .section2 .modal .form-wrapper .form-body span:hover {
-            cursor: default; }
-      .wrapper .section2 .modal .form-wrapper .btn-submit {
-        -moz-transition: 2s ease;
-        /* Firefox 4 */
-        -o-transition: 2s ease;
-        /* Opera */
-        -webkit-transition: 2s ease;
-        /* Safari and Chrome */
-        background-color: #cdfccd;
-        border-radius: 5px;
-        border: none;
-        box-sizing: border-box;
-        display: block;
-        font-size: 14px;
-        height: 40px;
-        letter-spacing: 1px;
-        line-height: 20px;
-        margin: auto auto 10px auto;
-        text-transform: uppercase;
-        transition: 0.8s;
-        width: 80%; }
-        .wrapper .section2 .modal .form-wrapper .btn-submit:hover {
-          background-color: #eebbc3;
-          border: 1px solid #E79DAB;
-          cursor: pointer;
-          transition: 0.1s; }
-        .wrapper .section2 .modal .form-wrapper .btn-submit:focus {
-          background-color: #eebbc3;
-          border: 1px solid #E79DAB;
-          cursor: pointer;
-          outline: none;
-          transition: 0.3s; }
-        .wrapper .section2 .modal .form-wrapper .btn-submit:active {
-          background-color: #cdfccd;
-          border: 1px solid #cdfccd;
-          cursor: pointer;
-          outline: none;
-          transition: 0.3s; }
-  .wrapper .section2 h1 {
-    position: absolute;
-    margin: 0;
-    z-index: 1; }
-  .wrapper .section2 .work-wrapper {
-    background-color: navajowhite;
-    height: 100vh;
-    margin: auto 0 auto auto;
-    width: calc(100% - 434px);
-    overflow: hidden;
-    padding-top: 90px;
-    position: absolute;
-    left: 434px;
-    z-index: 0; }
-    .wrapper .section2 .work-wrapper .work-data {
-      height: 100%;
-      overflow-y: scroll; }
-      .wrapper .section2 .work-wrapper .work-data .client-data {
-        border: 1px solid black;
-        border-bottom: none;
-        display: block;
-        width: 100%;
-        background-color: #b8c1ec;
-        height: 40px;
-        font-size: 18px; }
+  position: relative;
+}
+.wrapper .section1, .wrapper .section2, .wrapper .section3, .wrapper .section4 {
+  height: 100vh;
+}
+.wrapper .section1 .container, .wrapper .section2 .container, .wrapper .section3 .container, .wrapper .section4 .container {
+  font-size: 18px;
+  height: inherit;
+  width: 60vw;
+}
+.wrapper .section1 .container h1, .wrapper .section2 .container h1, .wrapper .section3 .container h1, .wrapper .section4 .container h1 {
+  font-size: 52px;
+  margin: auto;
+  text-align: center;
+}
+.wrapper .section2 .modal {
+  align-items: center;
+  background: #b8c1ec;
+  border-radius: 20px;
+  border: 1px solid #333;
+  color: #232946;
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0 auto;
+  min-height: 40vh;
+  padding: 10px;
+  position: relative;
+  top: 35vh;
+  transition: margin-top 1s ease-in;
+  width: 30%;
+  z-index: 9999;
+}
+.wrapper .section2 .modal .form-title-wrapper {
+  color: #232946;
+  font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
+  width: 100%;
+}
+.wrapper .section2 .modal .form-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 22vh;
+  width: 100%;
+}
+.wrapper .section2 .modal .form-wrapper .form-body {
+  align-content: center;
+  display: flex;
+  flex-direction: column;
+}
+.wrapper .section2 .modal .form-wrapper .form-body-login, .wrapper .section2 .modal .form-wrapper .form-body-password {
+  background-color: #fffffe;
+  border-radius: 5px;
+  border: none;
+  box-sizing: border-box;
+  display: block;
+  margin: auto auto 10px auto;
+  min-height: 40px;
+  width: 80%;
+}
+.wrapper .section2 .modal .form-wrapper .form-body span {
+  color: crimson;
+  margin: auto;
+  display: block;
+  font-size: 10px;
+  text-align: center;
+  text-shadow: none;
+}
+.wrapper .section2 .modal .form-wrapper .form-body span:hover {
+  cursor: default;
+}
+.wrapper .section2 .modal .form-wrapper .btn-submit {
+  -moz-transition: 2s ease;
+  /* Firefox 4 */
+  -o-transition: 2s ease;
+  /* Opera */
+  -webkit-transition: 2s ease;
+  /* Safari and Chrome */
+  background-color: #cdfccd;
+  border-radius: 5px;
+  border: none;
+  box-sizing: border-box;
+  display: block;
+  font-size: 14px;
+  height: 40px;
+  letter-spacing: 1px;
+  line-height: 20px;
+  margin: auto auto 10px auto;
+  text-transform: uppercase;
+  transition: 0.8s;
+  width: 80%;
+}
+.wrapper .section2 .modal .form-wrapper .btn-submit:hover {
+  background-color: #eebbc3;
+  border: 1px solid #E79DAB;
+  cursor: pointer;
+  transition: 0.1s;
+}
+.wrapper .section2 .modal .form-wrapper .btn-submit:focus {
+  background-color: #eebbc3;
+  border: 1px solid #E79DAB;
+  cursor: pointer;
+  outline: none;
+  transition: 0.3s;
+}
+.wrapper .section2 .modal .form-wrapper .btn-submit:active {
+  background-color: #cdfccd;
+  border: 1px solid #cdfccd;
+  cursor: pointer;
+  outline: none;
+  transition: 0.3s;
+}
+.wrapper .section2 h1 {
+  position: absolute;
+  margin: 0;
+  z-index: 1;
+}
+.wrapper .section2 .work-wrapper {
+  height: calc(100vh - 2px);
+  margin: auto 0 auto auto;
+  width: calc(100% - 434px);
+  overflow: hidden;
+  padding-top: 90px;
+  position: absolute;
+  left: 434px;
+  z-index: 0;
+}
+.wrapper .section2 .work-wrapper .work-data {
+  height: 100%;
+  overflow-y: scroll;
+}
+.wrapper .section2 .work-wrapper .work-data .client-data {
+  align-items: center;
+  border-radius: 5px;
+  display: flex;
+  font-weight: 900;
+  width: 100%;
+  min-height: 60px;
+  font-size: 18px;
+  padding: 0 20px;
+}
+.wrapper .section2 .work-wrapper .work-data .client-data:hover {
+  background-color: #b8c1ec;
+  transition: background-color 0.8s ease-in-out;
+}
+.wrapper .section2 .work-wrapper .work-data .client-data a {
+  color: #fffffe;
+  letter-spacing: 1px;
+  text-shadow: none;
+  text-decoration: none;
+  opacity: 1;
+}
 
 section {
   align-items: center;
@@ -160,69 +199,84 @@ section {
   font-size: 40px;
   font-weight: 100;
   height: 100vh;
-  justify-content: flex-start; }
+  justify-content: flex-start;
+}
 
 .nav {
-  text-shadow: 0 0 5px white; }
-  .nav__wrapper {
-    position: fixed;
-    height: 100%;
-    padding: 24px;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-end; }
-  .nav {
-    margin: 0 0 100px 30px; }
-  .nav__counter {
-    font-size: 20px;
-    transition: all 0.15s ease-out; }
-  .nav__body {
-    font-weight: 100;
-    font-size: 12px;
-    line-height: 14px;
-    width: 300px;
-    height: 0;
-    overflow: hidden;
-    opacity: 0;
-    transition: height 0.3s ease-out, opacity 0.2s ease-out; }
-  .nav li {
-    position: relative;
-    transition: all 0.3s ease-out;
-    margin-bottom: 1em;
-    list-style-type: none; }
-    .nav li:after {
-      content: '';
-      display: block;
-      border-left: 2px solid white;
-      border-top: 2px solid white;
-      height: 250px;
-      width: 20px;
-      position: absolute;
-      left: -30px;
-      top: 15px; }
-    .nav li a {
-      display: block;
-      padding: 0;
-      color: #fff;
-      text-decoration: none;
-      transition: all 0.15s ease-out; }
-      .nav li a:hover {
-        background-color: transparent;
-        padding-left: 0.5em; }
-      .nav li a:focus {
-        background-color: transparent; }
-    .nav li.active {
-      pointer-events: none;
-      padding-left: 1em; }
-      .nav li.active:after {
-        width: 30px;
-        height: 400px;
-        top: 10px; }
-      .nav li.active .nav__counter {
-        font-size: 20px; }
-      .nav li.active .nav__body {
-        height: 100px;
-        opacity: 1;
-        overflow: visible; }
+  text-shadow: 0 0 5px white;
+}
+.nav__wrapper {
+  position: fixed;
+  height: 100%;
+  padding: 24px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-end;
+}
+.nav {
+  margin: 0 0 100px 30px;
+}
+.nav__counter {
+  font-size: 20px;
+  transition: all 0.15s ease-out;
+}
+.nav__body {
+  font-weight: 100;
+  font-size: 12px;
+  line-height: 14px;
+  width: 300px;
+  height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: height 0.3s ease-out, opacity 0.2s ease-out;
+}
+.nav li {
+  position: relative;
+  transition: all 0.3s ease-out;
+  margin-bottom: 1em;
+  list-style-type: none;
+}
+.nav li:after {
+  content: "";
+  display: block;
+  border-left: 2px solid white;
+  border-top: 2px solid white;
+  height: 250px;
+  width: 20px;
+  position: absolute;
+  left: -30px;
+  top: 15px;
+}
+.nav li a {
+  display: block;
+  padding: 0;
+  color: #fff;
+  text-decoration: none;
+  transition: all 0.15s ease-out;
+}
+.nav li a:hover {
+  background-color: transparent;
+  padding-left: 0.5em;
+}
+.nav li a:focus {
+  background-color: transparent;
+}
+.nav li.active {
+  pointer-events: none;
+  padding-left: 1em;
+}
+.nav li.active:after {
+  width: 30px;
+  height: 400px;
+  top: 10px;
+}
+.nav li.active .nav__counter {
+  font-size: 20px;
+}
+.nav li.active .nav__body {
+  height: 100px;
+  opacity: 1;
+  overflow: visible;
+}
 
 /*# sourceMappingURL=styles.css.map */
